D D D D D index problems solved

--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -28,6 +28,16 @@ Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch cli
 
 Geneigten LeserInnen sei besonders empfohlen auch auf den 'Diagramm' button zu clicken um ein Blockdiagramm zu sehen dass dem Code/dem jeweiligen Konzept Entspricht.
 
+Es kann nicht garantiert werden dass dieses Online service ständig online ist und die Details der Programmiersprache \texttt{FAUST} sind \textbf{nicht} Teil des Kurses.
+
 
 \section*{Contributors}
 Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Verbesserungsvorschläge gemacht haben.
+
+\section*{General TODOs}
+\begin{itemize}
+	\item indexing
+	\item proof reading..
+	\item Page numbers
+	\item scheinbar wird derzeit teilweise Text 'verschluckt'. zb linearfaktorzerlegung.
+\end{itemize}
