--- a/lesson3.tex
+++ b/lesson3.tex
@@ -118,9 +118,11 @@ $$ z = r (cos(\varphi) + i sin(\varphi))$$
 
 \section{Eulersche Darstellung}
 
+\index{Eulersche Formel}
+\index{Eulersche Darstellung}
+\index{Exponentialform}
 
-
-Wohl eine der wichtigsten Gleichungen für die Audio Technik ist die \index{Eulersche Formel}:
+Wohl eine der wichtigsten Gleichungen für die Audio Technik ist die Eulersche Formel:
 
 \important{
 \begin{equation}\label{eq:euler}
@@ -128,7 +130,7 @@ e^{xi} = cos(x) + isin(x)
 \end{equation}
 }
 
-Aus Gleichung \ref{eq:euler} und der Polaren Darstellung leitet sich die '\index{Eulersche Darstellung}' oder auch '\index{Exponentialform}' für komplexe Zahlen ab:
+Aus Gleichung \ref{eq:euler} und der Polaren Darstellung leitet sich die 'Eulersche Darstellung' oder auch 'Exponentialform' für komplexe Zahlen ab:
 
 \important{
 \begin{equation}\label{eq:eulerNotation}
@@ -160,7 +162,8 @@ So wie die Multiplikation in Kartesischer Darstellung wesentlich komplizierter w
 
 
 \section{Konjugiert Komplexe Zahl}
-Gegeben $z_1 = a + bi$ wir die zahl $z_2 = a - bi = \overline{z_1}$ als \index{konjugiert komplex} bezeichnet. Oder in Exponentialform:
+\index{konjugiert komplex}
+Gegeben $z_1 = a + bi$ wir die zahl $z_2 = a - bi = \overline{z_1}$ als konjugiert komplex bezeichnet. Oder in Exponentialform:
 $$z = re^{\varphi i} \iff \overline{z} = re^{-\varphi i}$$
 
 \begin{figure}[h]
