--- a/pythonCheat.tex
+++ b/pythonCheat.tex
@@ -13,7 +13,7 @@
     \texttt{zeros()} & \texttt{x = zeros(5)} & Generierung eines arrays, mit nullen befüllt. \\ \hline
     \texttt{linspace()} & \texttt{x = linspace(0,1, 5)} & Generierung eines arrays, zahlen linear zwischen Argument 1 und 2 erzeugt, Anzahl der zahlen bestimmt durch argument 3. \\ \hline
     \texttt{plot()} & \texttt{plot(x,y)} & Line-plot erzeugen.  \\ \hline
-    \texttt{clf()} & \texttt{clf(x,y)} & Clear figure. Aktuellen plot löschen.  \\ \hline
+    \texttt{clf()} & \texttt{clf()} & Clear figure. Aktuellen plot löschen.  \\ \hline
     \texttt{scatter()} & \texttt{scatter(x,y)} & Scatter Plot erzeugen. \\ \hline
     \texttt{stem()} & \texttt{stem(x,y)} & Stem Plot erzeugen. \\ \hline
 
