--- a/lesson1.tex
+++ b/lesson1.tex
@@ -39,7 +39,7 @@
 
 
 \subsection{Quantoren}
-
+\index{Quantor}
 \begin{itemize}
     \item $\forall$, 'Allquantor'
     \item $\exists$, 'Existenzquantor'
@@ -84,8 +84,8 @@ $\forall x \in X, \: A(x)$ : Für alle $x$ in $X$ ist die Aussage $A(x)$ wahr.
 \praxis{Boolsche Logik: Programmieren}
 
 \section{Mengen}
-
-\important{Eine \index{Menge} ist eine Zusammenfassung unterscheidbarer Objekte zu einer Gesamtheit. Die Objekte werden 'Elemente' genannt}
+\index{Menge}
+\important{Eine Menge ist eine Zusammenfassung unterscheidbarer Objekte zu einer Gesamtheit. Die Objekte werden 'Elemente' genannt}
 
 % \equation{ 
 Beispiele für \emph{explizite} Mengen:
@@ -187,10 +187,10 @@ Von \href{https://de.wikipedia.org/wiki/Gerade\_und\_ungerade\_Funktionen}{Wikip
 \emph{'Eine reelle Funktion $f\colon D\to \mathbb {R} $ mit einer bezüglich der Null symmetrischen Definitionsmenge 
 $ D\subseteq \mathbb {R}$ heißt gerade, wenn für alle Argumente $ x\in D$  $f(-x)=f(x)$.'} \\
 
-Kurz:
+Ungerade und Gerade Funktionen kurz zusammengefasst:
 \begin{itemize}
-    \item \index{Gerade Funktion}:  $f(-x) = f(x)$. Achsensymmetrisch zur $y$-Achse.
-    \item \index{Ungerade Funktion}:  $f(-x) = -f(x)$. Punktsymmetrisch zum Ursprung.
+    \item Gerade Funktion:  $f(-x) = f(x)$. Achsensymmetrisch zur $y$-Achse.
+    \item Ungerade Funktion:  $f(-x) = -f(x)$. Punktsymmetrisch zum Ursprung.
 \end{itemize}
 
     \begin{figure}[H]
@@ -215,8 +215,9 @@ Grundfrequenz. Gerade Obertöne entstehen bei geraden Funktionen, ungerade bei u
 $f(x)$ heißt periodisch mit Periode $p>0$ wenn für alle $ x \in \mathbb{R}$ gilt $f(x) = f(x+p)$.
 
 \subsection{Linearität}
+\index{Linearität}
 Aus Tontechnischer/Signalverarbeitungssicht ist hier eine wichtige Unterscheidung zu machen. Manche Rechenoperationen sind \emph{linear} andere nicht. 
-\index{Linearität} ist die Eigenschaft eines Systems \emph{proportional} zu reagieren.
+Linearität ist die Eigenschaft eines Systems \emph{proportional} zu reagieren.
 Wenn also der Input an einem linearen System steigt, steigt der Output proportional dazu. Das einfache System 'idealer Verstärker' soll uns als Beispiel dienen:
 $$f(x) = x \cdot a$$ wobei $a$ hier der Verstärkungsfaktor wäre. Nennen wir den Output $y$, also sei $y \coloneqq f(x)$ dann können wir sagen $$y \propto x.$$ 
 $y$ verhält sich proportional zu $x$. 
@@ -273,7 +274,8 @@ Alle Ganzzahlen inkl. $0$ und negativen Zahlen.
 Zahlen die als Brüche von Ganzzahlen ausgedrückt werden können. zB. $5$ $\frac{1}{2}$ oder $\frac{1}{3}$.
 
 \subsection{Reelle Zahlen $\mathbb{R}$}
-\index{Reelle Zahlen} füllen die 'Lücken' zwischen den Rationalen Zahlen. Enthalten sind auch irrationale Zahlen wie $\pi$ oder $\sqrt{2}$.
+\index{Reelle Zahlen}
+Reelle Zahlen füllen die 'Lücken' zwischen den Rationalen Zahlen. Enthalten sind auch irrationale Zahlen wie $\pi$ oder $\sqrt{2}$.
 
 
 
@@ -352,8 +354,8 @@ Einfache Rechenoperationen wie $+, -, \cdot, / $, haben in der Tontechnik/Signal
 
 
 \subsection{Modulo}
-
-Die \emph{\index{Modulo}} Operation ist eine Division zweier Zahlen, wobei das Resultat der \emph{Rest} dieser Division ist. In mathematischer Notation schreibt man typischerweise $a \, mod \, b$ um zu sagen, "dividiere $a$ durch $b$ und 'nimm den Rest'".
+\index{Modulo}
+Die \emph{Modulo} Operation ist eine Division zweier Zahlen, wobei das Resultat der \emph{Rest} dieser Division ist. In mathematischer Notation schreibt man typischerweise $a \, mod \, b$ um zu sagen, "dividiere $a$ durch $b$ und 'nimm den Rest'".
 
 In vielen Programmiersprachen(Python, C, Java) wir die Modulo Operation als \texttt{\%} dargestellt, zB \texttt{14 \% 12}. Die Operation ist hier erwähnenswert da sie extrem nützlich ist aber oft in klassischen Mathematik Büchern keinen großen Stellenwert hat. \\
 \textbf{Der Modulo kann verwendet werden um aus einer Kontinuierlichen Funktion eine Periodische Funktion zu erzeugen.}
@@ -393,8 +395,8 @@ Das grosse Sigma, $\Sigma$ ist eine kuyrzschreibweise für Summen. Wir finden di
 \begin{equation}
 {\displaystyle \sum _{k=1}^{5}k = 1 + 2 + 3 + 4 + 5 }
 \end{equation}
-
-Hier ist $k$ der \emph{index} (Auch 'Laufindex' oder 'Zähler' genannt). Unter dem Sigma steht bei welcher zahl zu zählen begonnen wird und welchen Buchstaben wir als index wählen. über dem Sigma steht bis wohin wir zählen. Nach dem Sigma steht was addiert wird. Allgemein:
+\emph{Index}
+Hier ist $k$ der index (Auch 'Laufindex' oder 'Zähler' genannt). Unter dem Sigma steht bei welcher zahl zu zählen begonnen wird und welchen Buchstaben wir als index wählen. über dem Sigma steht bis wohin wir zählen. Nach dem Sigma steht was addiert wird. Allgemein:
 
 \important{
 \begin{equation}
@@ -461,8 +463,11 @@ Der Betrag kann als \emph{Funktion} aufgefasst werden (später mehr zu Funktione
     \label{fig:betrag}
 \end{figure}
 
+\index{Betrag}
+\index{Absolutwert}
+
 \praxis{
-Der \index{Betrag} (oder auch Absolutwert) hat in der Audio Technik eine Wichtige Rolle, speziell der Betrag von Komplexen Zahlen, den Ergebnissen der Fourier Transformation. In der Elektrotechnik kann er als 'Gleichrichter' gefunden werden um Wechselströme zu Gleichströmen zu wandeln. Er ist eine der simpelsten Verzerrungen mit geraden harmonischen.
+Der Betrag (oder auch Absolutwert) hat in der Audio Technik eine Wichtige Rolle, speziell der Betrag von Komplexen Zahlen, den Ergebnissen der Fourier Transformation. In der Elektrotechnik kann er als 'Gleichrichter' gefunden werden um Wechselströme zu Gleichströmen zu wandeln. Er ist eine der simpelsten Verzerrungen mit geraden harmonischen.
 }
 
 Soundbeispiel hier: \faust{Betrag Einer 150Hz Sinus Schwingung}{https://faustide.grame.fr/?autorun=1\&voices=0\&name=abs_test\&inline=aW1wb3J0KCJzdGRmYXVzdC5saWIiKTsKcHJvY2VzcyA9IG9zLm9zYygxNTApOmFiczs\%3D}
