--- a/references.bib
+++ b/references.bib
@@ -85,3 +85,10 @@
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Sinc_filter&oldid=1245290540}",
     note = "[Online; accessed 15-December-2024]"
   }
+
+@article{smith1997scientist,
+  title={The Scientist and Engineer’s Guide to Digital Signal Processing},
+  author={Smith, Steven W},
+  journal={California Technical Pub},
+  year={1997}
+}
