--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -34,10 +34,10 @@ Es kann nicht garantiert werden dass dieses Online service ständig online ist u
 \section*{Contributors}
 Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Verbesserungsvorschläge gemacht haben.
 
-\section*{General TODOs}
-\begin{itemize}
-	\item indexing
-	\item proof reading..
-	\item Page numbers
-	\item scheinbar wird derzeit teilweise Text 'verschluckt'. zb linearfaktorzerlegung.
-\end{itemize}
+% \section*{General TODOs}
+% \begin{itemize}
+% 	% \item indexing
+% 	\item proof reading..
+% 	% \item Page numbers
+% 	% \item scheinbar wird derzeit teilweise Text 'verschluckt'. zb linearfaktorzerlegung.
+% \end{itemize}
