--- a/lesson1.tex
+++ b/lesson1.tex
@@ -201,12 +201,22 @@ Ungerade und Gerade Funktionen kurz zusammengefasst:
         \label{fig:evenUneven}
     \end{figure}
 
+\begin{question}
+Sinus und Kosinus: Sind sie gerade? Ungerade? Nichts von alledem? Wenn Unsicherheit besteht Funktionen aufzeichnen! Oder in Abb. \ref{fig:sincos} betrachten!
+\end{question}
+
+\begin{answer}
+Bei der Betrachtung des Funktionsverlaufs könnte man vermuten dass $cos(x) = cos(-x)$ und der Kosinus somit eine \emph{gerade} Funktion ist. 
+Beim Sinus gilt (auch das lässt sich im Funktionsverlauf gut sehen) $-sin(x) = sin(-x)$, er ist somit ungerade.
+\end{answer}
+
+
 
 
 \todo[]{Gerade vs ungerade -> Verzerrung, faust beispiel auch.}
 
 \important{
-Dies hat tontechnische Relevanz, da bei nichtlinearen Funktionen Obertöne entstehen. Diese Obertöne sind entweder gerade oder ungerade vielfache der
+Dies hat tontechnische Relevanz, da bei der Anwendung von nichtlinearen Funktionen auf ein Signal Obertöne entstehen. Diese Obertöne sind entweder gerade oder ungerade vielfache der
 Grundfrequenz. Gerade Obertöne entstehen bei geraden Funktionen, ungerade bei ungeraden Funktionen.}
 
 
@@ -312,7 +322,7 @@ Reelle Zahlen füllen die 'Lücken' zwischen den Rationalen Zahlen. Enthalten si
 
 
 \subsection{Komplexe Zahlen $\mathbb{C}$}
-Besonders wichtig für die Tontechnik, hierzu mehr in Kapitel \ref{chap:complex}. Erweiterung der Zahlengeraden (siehe Abb. \ref{fig:zahlengerade}) auf die 'Komplexe Ebene'. Sei dienen uns zur Darstellung von Schwingungen, kommen vor in der Fouriertransformation (bei jeder Berechnung eines klassischen Audio Spektrums!) etc. \
+Besonders wichtig für die Tontechnik, hierzu mehr in Kapitel \ref{chap:complex}. Erweiterung der Zahlengeraden (siehe Abb. \ref{fig:zahlengerade}) auf die 'Komplexe Ebene'. Sie dienen uns zur Darstellung von Schwingungen, kommen vor in der Fouriertransformation (bei jeder Berechnung eines klassischen Audio Spektrums!) etc. \
 Es gibt noch weitere Zahlen Mengen, zum Beispiel die \emph{Quaternionen}, eine Erweiterung der Komplexen Zahlen. Diese finden zum Beispiel Anwendung in der Grafik Verarbeitung (in mehr oder weniger jeder 3D Animation zB.). 
 
 
