--- a/lesson1.tex
+++ b/lesson1.tex
@@ -207,7 +207,7 @@ Sinus und Kosinus: Sind sie gerade? Ungerade? Nichts von alledem? Wenn Unsicherh
 
 \begin{answer}
 Bei der Betrachtung des Funktionsverlaufs könnte man vermuten dass $cos(x) = cos(-x)$ und der Kosinus somit eine \emph{gerade} Funktion ist. 
-Beim Sinus gilt (auch das lässt sich im Funktionsverlauf gut sehen) $-sin(x) = sin(-x)$, er ist somit ungerade.
+Beim Sinus gilt (auch das lässt sich im Funktionsverlauf gut sehen) $-sin(x) = sin(-x)$, er ist somit ungerade. Diese Vermutungen lassen sich durch Einsetzen von werten bewähren. 
 \end{answer}
 
 
