--- a/lesson2.tex
+++ b/lesson2.tex
@@ -425,7 +425,7 @@ Out[1]: (x - 3)**2
 
 \subsection{Symbolische Partialbruchzerlegung}
 
-\begin{python}{Symbolische Linearfaktorzerlegung in Python}
+\begin{python}{Symbolische Partialbruchzerlegung in Python}
 p = (x + 2)/(x + 1)
 sp.apart(p)
 Out[1]: 1 + 1/(x + 1)
