--- a/lesson4.tex
+++ b/lesson4.tex
@@ -1,2 +1,4 @@
 %!TEX root = main.tex
 \chapter{Lineare Algebra, Vektoren und Matrizen}
+
+\todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
