typos, small explanations

--- a/lesson1.tex
+++ b/lesson1.tex
@@ -216,7 +216,7 @@ Beim Sinus gilt (auch das lässt sich im Funktionsverlauf gut sehen) $-sin(x) = 
 \todo[]{Gerade vs ungerade -> Verzerrung, faust beispiel auch.}
 
 \important{
-Dies hat tontechnische Relevanz, da bei der Anwendung von nichtlinearen Funktionen auf ein Signal Obertöne entstehen. Diese Obertöne sind entweder gerade oder ungerade vielfache der
+Dies hat tontechnische Relevanz, da bei der Anwendung von nichtlinearen Funktionen auf ein Signal Obertöne entstehen. Diese Obertöne sind entweder gerade oder ungerade Vielfache der
 Grundfrequenz. Gerade Obertöne entstehen bei geraden Funktionen, ungerade bei ungeraden Funktionen.}
 
 
@@ -512,7 +512,7 @@ $$ \frac{a^n} {b^n} = \left(\frac{a} {b} \right)^n. \: b \neq 0.$$
 }
 
 \subsubsection{Wissenschaftliche Notation}
-
+\todo[inline]{Erklärungen}
 \important{
 
 $$ x = d\cdot 10^e$$
