--- a/lesson3.tex
+++ b/lesson3.tex
@@ -49,6 +49,8 @@ z = a + bi
 	\label{fig:komp_kart}
 \end{figure}
 
+Unabhängig von der mathematischen 'Darstellung' - also Schreibweise - der Zahl kann sie als Punkt in einem zweidimensionalen Koordinatensystem visualisiert werden. Hier stellt die Abzisse den Realteil ($\Re$) und die Ordinate den Imaginärteil ($\Im$) dar, siehe Abbildung \ref{fig:komp_kart}. 
+
 Vielleicht ist es einleuchtend dass wir den selben Punkt auf dieser \emph{Zahlenebene} nicht nur per 'x/y' Koordinaten darstellen können sondern alternativ via Radius $r$ und Winkel $\varphi$, siehe Abb. \ref{fig:komp_pol}.
 
 
